--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 android {
-    namespace "com.mygdx.game"
+    namespace "com.infinitegolf.game"
     buildToolsVersion "34.0.0"
     compileSdkVersion 34
     sourceSets {
@@ -15,10 +15,12 @@ android {
 
     }
     packagingOptions {
-        exclude 'META-INF/robovm/ios/robovm.xml'
+        resources {
+            excludes += ['META-INF/robovm/ios/robovm.xml']
+        }
     }
     defaultConfig {
-        applicationId "com.mygdx.game"
+        applicationId "com.infinitegolf.game"
         minSdkVersion 14
         targetSdkVersion 34
         versionCode 1
@@ -83,7 +85,7 @@ tasks.register('run', Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.mygdx.game/com.mygdx.game.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.infinitegolf.game/com.infinitegolf.game.AndroidLauncher'
 }
 
 eclipse.project.name = appName + "-android"
